# CuteSeven

./: .gitignore  README.md  README.md~
GUI/: Config.ini  Cute7_GUI  demo_run.sh  demo_run.sh~  hello
Tencent_iot/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
Tencent_iot/cute7/: main.c  makefile  myfifo  run.sh
Tencent_iot/cute7/recv/: 1FE967D4-12C6-4CEC-906E-D7F51F832A98.amr  8AE1FD3B-77F8-463C-98EE-CF4EFB97AEDB.amr  B46815B3-D735-4CA3-B6FD-0130F27E3FA5.amr
Tencent_iot/src/: iot_explain.py  iot_explain.py~  tx_iot.c~
Tencent_iot/tx_iot_sdk/: 1700005043.pem  Makefile  Makefile~  alarm.c  alarm.c~  audiofile.c  audiofile.c~  cute7  iot_cute7  iot_video.c~  iot_video.h  iot_video.h~  ipcrotate.c  ipcrotate.c~  main.c  main.c~  makefile  makefile~  myfifo.c  myfifo.c~  myfifo.h  myfifo.h~  run.sh  run.sh~  tx_iot.c  tx_iot.c~
Tencent_iot/tx_iot_sdk/SysData/: Config.db
Tencent_iot/tx_iot_sdk/back/: iot_video.c  tx_iot.c
Tencent_iot_SDK/: demo_bind.c  demo_filetransfer.c  demo_video.c
Tencent_iot_SDK/cute7/: .run.sh.un~  cute7  myfifo
backup/: iai_kinect2.tar  install.sh  install.sh~  key.sh  key.sh~  run.sh  run.sh~
backup/Tencent_iot_SDK/: GUID_file.txt
backup/libfreenect2/: my_API
car/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
car/src/: car.cpp
iai_kinect2/: README.md
iai_kinect2/kinect2_bridge/: README.md
iai_kinect2/kinect2_calibration/: README.md
opencvtest/: CMakeLists.txt  cam.sh  cam.sh~  package.xml  readme  readme~
xf_voice/: CMakeLists.txt  CMakeLists.txt~  voice.launch  voice.launch~
(+28 files in other folders)
